--- a/section11/src/css/Student.css
+++ b/section11/src/css/Student.css
@@ -14,12 +14,9 @@
 .date { flex: 2; }
 
 .Update input {
-  width: 40px;
-  margin-left: 20px;
-  padding-left: 40px;
+  flex:1
 }
 
-.Update .korInput{ margin-left: 15px;}
 
 .btn_area { 
   width: 110px; 
